thay rec mau hong thanh image

--- a/qml.qrc
+++ b/qml.qrc
@@ -32,5 +32,6 @@
         <file>ControlButton.qml</file>
         <file>icon/tri.png</file>
         <file>MediaPlayer.qml</file>
+        <file>icon/dt.jpg</file>
     </qresource>
 </RCC>
