--- a/qml.qrc
+++ b/qml.qrc
@@ -35,5 +35,9 @@
         <file>icon/dt.jpg</file>
         <file>video/BRav1.avi</file>
         <file>video/bloh.mp4</file>
+        <file>languages/MyMediaPlayer_vi.ts</file>
+        <file>languages/MyMediaPlayer_en.ts</file>
+        <file>languages/MyMediaPlayer_vi.qm</file>
+        <file>languages/MyMediaPlayer_en.qm</file>
     </qresource>
 </RCC>
